# Project-SHIELD

./: .gitattributes  .gitignore  Cargo.toml  README.md
deployment/: README.md  build-linux.sh  build-macos.sh  build-windows.ps1
deployment/linux/: README.md  build.sh
deployment/macos/: README.md  build.sh
deployment/windows/: README.md  SecurePortableVault-Windows.exe.sha256  build.ps1
dist-portable/: README.txt
docs/: CROSS_PLATFORM_RELEASE.md
linux/: README.md  bootstrap.sh  build.sh  run.sh
macos/: README.md  bootstrap.sh  build.sh
scripts/: build-linux.sh  build-macos.sh  build-windows.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: archive.rs  audit.rs  crypto.rs  error.rs  main.rs  manifest.rs  models.rs  state.rs  vault.rs
src-tauri/src/commands/: admin.rs  auth.rs  user.rs
src-tauri/ui/: app.js  index.html  style.css  walkthrough.md
windows/: README.md  bootstrap.ps1  build.ps1  run.ps1
