[package]
name = "secure-vault"
version = "0.1.0"
description = "Secure Portable SSD/HDD Vault System backend"
authors = ["Dark Rainbow"]
license = "Proprietary"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

argon2 = "0.5"
aes-gcm = "0.10"
rand_core = { version = "0.6", features = ["std"] }
zeroize = { version = "1", features = ["derive"] }
secrecy = "0.8"
subtle = "2"

zstd = "0.13"
blake3 = "1"
base64 = "0.22"

uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "macros"] }

ed25519-dalek = { version = "2", features = ["serde"] }
signature = "2"
ml-kem = { version = "0.3.2", features = ["getrandom", "zeroize"] }

thiserror = "2"
